packages/next-swc/crates/next-custom-transforms/tests/errors/next-font-loaders/export-let/input.js
import React from 'react'
import { Abel, Inter } from '@next/font/google'

export let firaCode = Abel()
export var inter = Inter()
